# hello-web-python

./: .gitignore  README.md  pyproject.toml
.github/workflow/: ci-python-pip.yml
src/hello_web/: app.py
src/hello_web/static/: style.css
src/hello_web/templates/: index.html
tests/: test_smoke.py
